--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,344 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  font-family: "Titillium Web", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Bangers", cursive;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+.container {
+  margin: 0 5%;
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  margin: 10px 0 50px 0;
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
+}
+
+header nav {
+  display: flex;
+  justify-content: space-between;
+  width: 70%;
+  margin-top: 11px;
+}
+
+header nav a {
+  color: gray;
+  text-decoration: none;
+}
+
+header .logo {
+  width: 130px;
+  height: 30px;
+  margin: 5px 0 0 auto;
+}
+
+.banner {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 3%;
+}
+
+.banner div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto 0 10%;
+  text-align: center;
+  width: 40%;
+}
+
+.banner div h1 {
+  font-size: 80px;
+}
+
+.banner div p {
+  border: 1px solid black;
+  padding: 8px 50px 8px 50px;
+}
+
+.banner img {
+	width: 400px;
+	height: 400px;
+}
+
+hr {
+  margin: 50px 0 50px 0;
+  color: black;
+}
+
+main {
+  display: flex;
+	flex-direction: column;
+	line-height: 20px;
+}
+
+.section-in-2 {
+  display: flex;
+}
+
+.section-in-2 div {
+  width: 47%;
+  margin-right: 2%;
+}
+
+main .middle-img {
+  width: 100%;
+  margin: 50px 0 50px 0;
+}
+
+.section-in-3 {
+  display: flex;
+}
+
+main .section-in-3 div {
+  width: 31%;
+  margin-right: 2%;
+}
+
+footer address div {
+  margin: 20px 0;
+}
+
+footer .copyright {
+  text-align: center;
+  margin: 40px 0;
+}
+
+/* the styling of the services page */
+
+.container-services {
+  margin: 0 15%;
+  display: flex;
+  flex-direction: column;
+}
+
+ #services {
+	 margin-bottom: 20px;
+ }
+
+.web-banner {
+	display: flex;
+	flex-direction: column;
+}
+
+.web-banner img {
+	width: 100%;
+	margin-top: 0;
+}
+
+.web-banner div h2 {
+	font-size: 30px;
+	margin: 35px 0 30px 0;
+}
+
+.web-banner div p {
+	line-height: 20px;
+	text-align: justify;
+}
+
+.list {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.list div {
+	border: 1px solid black;
+	width: 48%;
+	background-color: #f4f4f4;
+	margin-bottom: 4%;
+	padding: 20px;
+}
+
+.list div h3 {
+	margin-bottom: 20px;
+}
+
+.list div p {
+	line-height: 20px;
+}
+
+.list div button {
+	background-color: white;
+	border: 1px solid black;
+	border-radius: 5px;
+	margin-top: 20px;
+	padding: 10px 35px 10px 35px;
+}
+
+.tail-notes {
+	display: flex;
+	justify-content: space-between;
+	line-height: 25px;
+}
+
+.tail-notes div, img {
+	width: 48%;
+	height: auto;
+}
+
+.tail-notes div ul {
+	margin-top: 25px;
+}
+
+.tail-notes div ul li {
+	list-style-type: square;
+	list-style-position: inside;
+	padding-bottom: 10px;
+}
+
+.services-footer {
+	text-align: center;
+	margin: 100px 0 30px 0;
+}
