--- a/css/index.css
+++ b/css/index.css
@@ -151,10 +151,20 @@ h5 {
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
+:root {
+  font-size: 16px;
+}
+
 .container {
   margin: 0 5%;
   display: flex;
   flex-direction: column;
+}
+
+@media (max-screen: 800px) {
+  .container {
+    margin: 0 2.5%;
+  }
 }
 
 header {
@@ -180,6 +190,21 @@ header .logo {
   width: 130px;
   height: 30px;
   margin: 5px 0 0 auto;
+}
+
+@media (max-width: 800px) {
+  header {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  header nav {
+    width: 100%;
+  }
+
+  nav, a {
+    margin-top: 2rem;
+  }
 }
 
 .banner {
@@ -210,6 +235,16 @@ header .logo {
 .banner img {
 	width: 400px;
 	height: 400px;
+}
+
+@media (max-width: 800px) {
+  .banner  div {
+    margin: 0 auto;
+  }
+
+  .banner img {
+    display: none;
+  }
 }
 
 hr {
