--- a/css/index.css
+++ b/css/index.css
@@ -167,6 +167,12 @@ h5 {
   }
 }
 
+@media (max-screen: 500px) {
+  .container {
+    margin: 0;
+  }
+}
+
 header {
   margin: 10px 0 50px 0;
   display: flex;
@@ -207,6 +213,32 @@ header .logo {
   }
 }
 
+@media (max-width: 500px) {
+  header {
+    padding: 0;
+    margin: 0;
+  }
+  
+  header .logo {
+    margin: 0;
+  }
+
+  header nav {
+    flex-direction: column;
+    align-items: stretch;
+    border-top: 1px solid gray;
+  }
+
+  header nav a {
+    border-bottom: 1px solid gray;
+    border-width: 100%;
+    margin-top: 1rem;
+    text-align: center;
+    vertical-align: center;
+    padding-bottom: 1rem;
+  }
+}
+
 .banner {
   display: flex;
   justify-content: flex-end;
@@ -229,7 +261,7 @@ header .logo {
 
 .banner div p {
   border: 1px solid black;
-  padding: 8px 50px 8px 50px;
+  padding: 8px 50px;
 }
 
 .banner img {
@@ -247,9 +279,35 @@ header .logo {
   }
 }
 
+@media (max-width: 500px) {
+  .banner {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+  }
+
+  .banner div p {
+    min-width: 200px;
+  }
+}
+
 hr {
-  margin: 50px 0 50px 0;
+  margin: 50px 0;
   color: black;
+}
+
+@media (max-width: 800px) {
+  hr {
+    height: 0.2rem;
+    background: black;
+  }
+}
+
+@media (max-width: 500px) {
+  hr {
+    height: 0.2rem;
+    background: black;
+    margin: 30px 0;
+  }
 }
 
 main {
@@ -269,7 +327,7 @@ main {
 
 main .middle-img {
   width: 100%;
-  margin: 50px 0 50px 0;
+  margin: 50px 0;
 }
 
 .section-in-3 {
@@ -279,6 +337,31 @@ main .middle-img {
 main .section-in-3 div {
   width: 31%;
   margin-right: 2%;
+}
+
+@media (max-width: 500px) {
+  .section-in-2 {
+    flex-direction: column;
+  }
+
+  .section-in-2 div {
+    width: 100%;
+    margin-top: 2rem;
+  }
+
+  main .middle-img {
+    width: 100%;
+    margin: 30px 0;
+  }
+
+  .section-in-3 {
+    flex-direction: column;
+  }
+
+  main .section-in-3 div {
+    width: 100%;
+    margin-top: 2rem;
+  }
 }
 
 footer address div {
